[metadata]
name = tda-utils
version = 0.0.1
author = ashpipe
author_email = ashedpipe@gmail.com
description = Collection of useful python functions on top of tda-api python wrapper 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = TDAmeritrade, tda-api, python
url = https://github.com/ashpipe/tda-utils
project_urls =
    Bug Tracker = https://github.com/ashpipe/tda-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    tda-api
    pyyaml

[options.packages.find]
where = src